fixed split bug on cart page

--- a/shop/templates/shop/partials/_index.html
+++ b/shop/templates/shop/partials/_index.html
@@ -88,7 +88,7 @@
             "quantity": "{{ product.details.0.quantity }}",
             "size": "{{ product.details.0.size }}",
             "slug": "{{ product.slug }}",
-            "from_index": "True"
+            "from": "index"
         }'
         hx-target="#cart-count-top"
         hx-swap="outerHTML"
