--- a/shop/templates/shop/partials/_product-detail.html
+++ b/shop/templates/shop/partials/_product-detail.html
@@ -127,7 +127,7 @@
             "price":"{{current.unit_price}}",
             "quantity_ordered": "{{current.quantity}}",
             "slug": "{{product_slug}}",
-            "from_detail":"True"
+            "from":"detail"
         }'
         hx-target="#cart-count-top"
         hx-swap="outerHTML"
