--- a/shop/templates/shop/partials/_cart.html
+++ b/shop/templates/shop/partials/_cart.html
@@ -15,29 +15,30 @@
     
     <div class="layout">
     <div class="cart-items">
-    {% for item,values in cart.items %}
-        <article class="cart-item">
-        <img class="cart__image" src="/media/{{values.image_url}}" alt="Coat">
-        <div class="cart-item__info">
-            <strong>{{item}}</strong>
-            <span class="section__subtitle">Color: {{values.color}}, 
-                Size: {{values.size}}, 
-                price: ${{values.price}},
-                quantity: {{values.quantity}}
-            </span>
-            <div class="quantity">
-            <button class="quantity__btn quantity__btn--reduce" type="button">-</button>
-            <span> {{values.quantity}} </span>
-            <button class="quantity__btn quantity__btn--add" type="button">+</button>
+        {% for item,values in cart.items %}
+            <article class="cart-item">
+            <img class="cart__image" src="/media/{{values.image_url}}" alt="Coat">
+            <div class="cart-item__info">
+                <strong> <a href="{% url 'shop:product-detail' item %}">
+                    {{item}}</a></strong>
+                <span class="section__subtitle">Color: {{values.color}}, 
+                    Size: {{values.size}}, 
+                    price: ${{values.price}},
+                    quantity: {{values.quantity}}
+                </span>
+                <div class="quantity">
+                <button class="quantity__btn quantity__btn--reduce" type="button">-</button>
+                <span> {{values.quantity}} </span>
+                <button class="quantity__btn quantity__btn--add" type="button">+</button>
+                </div>
             </div>
-        </div>
-        <div class="cart-item__actions">
-            <strong>${{values.subtotal}}</strong>
-            <span class="section__subtitle">Subtotal ${{values.subtotal}}</span>
-            <a class="nav-link" href="#">Remove</a>
-        </div>
-        </article>
-    {% endfor %}
+            <div class="cart-item__actions">
+                <strong>${{values.subtotal}}</strong>
+                <span class="section__subtitle">Subtotal ${{values.subtotal}}</span>
+                <a class="nav-link" href="#">Remove</a>
+            </div>
+            </article>
+        {% endfor %}
     </div>
 
     <aside class="cart-summary">
