--- a/shop/templates/shop/partials/_index.html
+++ b/shop/templates/shop/partials/_index.html
@@ -83,6 +83,7 @@
             "id": "{{ product.id }}",
             "name": "{{ product.name}}",
             "image_url": "{{ product.first_image_for_cover }}",
+            "image_id": "{{ product.details.0.image_id}}",
             "price": "{{ product.details.0.unit_price }}",
             "color": "{{ product.details.0.color }}",
             "quantity": "{{ product.details.0.quantity }}",
