--- a/shop/templates/shop/partials/_cart.html
+++ b/shop/templates/shop/partials/_cart.html
@@ -30,8 +30,28 @@
                 </span>
                 <div class="quantity">
                 <button class="quantity__btn quantity__btn--reduce" type="button">-</button>
-                <span> {{values.quantity}} </span>
-                <button class="quantity__btn quantity__btn--add" type="button">+</button>
+                <span
+                id="cart-counter-on-product-{{values.product_id}}"
+                > {{values.quantity}} </span>
+                <button 
+                class="quantity__btn quantity__btn--add" 
+                type="button"
+                hx-post="{% url 'shop:add-to-cart' %}"
+                hx-vals = '{
+                    "id": "{{ values.product_id }}",
+                    "name": "{{ values.name}}",
+                    "image_url": "{{ values.image_url }}",
+                    "image_id": "{{ values.image_id}}",
+                    "price": "{{ values.price }}",
+                    "color": "{{ values.color }}",
+                    "quantity": "{{ values.quantity }}",
+                    "size": "{{ values.size }}",
+                    "slug": "{{ values.slug }}",
+                    "from": "cart"
+                }'    
+                hx-target="#cart-counter-on-product-{{values.product_id}}"
+                hx-swap="outerHTML"            
+                >+</button>
                 </div>
             </div>
             <div class="cart-item__actions">
