implemented reduce quantity in cart

--- a/shop/templates/shop/partials/_cart.html
+++ b/shop/templates/shop/partials/_cart.html
@@ -29,7 +29,26 @@
                     quantity: {{values.quantity}}
                 </span>
                 <div class="quantity">
-                <button class="quantity__btn quantity__btn--reduce" type="button">-</button>
+                <button 
+                class="quantity__btn quantity__btn--reduce" 
+                type="button"
+                hx-post="{% url 'shop:add-to-cart' %}"
+                hx-vals = '{
+                    "id": "{{ values.product_id }}",
+                    "name": "{{ values.name}}",
+                    "image_url": "{{ values.image_url }}",
+                    "image_id": "{{ values.image_id}}",
+                    "price": "{{ values.price }}",
+                    "color": "{{ values.color }}",
+                    "quantity": "{{ values.quantity }}",
+                    "size": "{{ values.size }}",
+                    "slug": "{{ values.slug }}",
+                    "action":"subtract",
+                    "from": "cart"
+                }'    
+                hx-target="#cart-counter-on-product-{{values.product_id}}"
+                hx-swap="outerHTML"                 
+                >-</button>
                 <span
                 id="cart-counter-on-product-{{values.product_id}}"
                 > {{values.quantity}} </span>
