--- a/shop/templates/shop/partials/_cart_page_counter.html
+++ b/shop/templates/shop/partials/_cart_page_counter.html
@@ -1,4 +1,4 @@
 <span
-id="cart-counter-on-product-{{product_id}}"
+id="cart-counter-on-product-{{product_id}}-{{order_item.image_id}}"
 > {{new_count}} 
 </span>
