implemented maximum addable cart logic

--- a/shop/templates/shop/partials/_cart_items.html
+++ b/shop/templates/shop/partials/_cart_items.html
@@ -24,7 +24,8 @@
                 "image_id": "{{ values.image_id}}",
                 "price": "{{ values.price }}",
                 "color": "{{ values.color }}",
-                "quantity": "{{ values.quantity }}",
+                "curr_total_quantity": "{{ values.curr_total_quantity }}",
+                "current_quantity": "{{ values.quantity }}",
                 "size": "{{ values.size }}",
                 "slug": "{{ values.slug }}",
                 "action":"subtract",
@@ -47,7 +48,8 @@
                 "image_id": "{{ values.image_id}}",
                 "price": "{{ values.price }}",
                 "color": "{{ values.color }}",
-                "quantity": "{{ values.quantity }}",
+                "curr_total_quantity": "{{ values.curr_total_quantity }}",
+                "current_quantity": "{{ values.quantity }}",
                 "size": "{{ values.size }}",
                 "slug": "{{ values.slug }}",
                 "from": "cart"
