--- a/shop/templates/shop/partials/_index.html
+++ b/shop/templates/shop/partials/_index.html
@@ -86,7 +86,8 @@
             "image_id": "{{ product.details.0.image_id}}",
             "price": "{{ product.details.0.unit_price }}",
             "color": "{{ product.details.0.color }}",
-            "quantity": "{{ product.details.0.quantity }}",
+            "curr_total_quantity": "{{ product.details.0.quantity }}",
+            "quantity_requested":"",
             "size": "{{ product.details.0.size }}",
             "slug": "{{ product.slug }}",
             "from": "index"
