--- a/shop/templates/shop/partials/_product-detail.html
+++ b/shop/templates/shop/partials/_product-detail.html
@@ -127,6 +127,8 @@
             "price":"{{current.unit_price}}",
             "slug": "{{product_slug}}",
             "image_id":"{{current.image_id}}",
+            "curr_total_quantity": "{{current.quantity}}",
+            "quantity_requested":"",
             "from":"detail" 
         }'
         hx-target="#cart-count-top"
