fixed max cartable logic on detail page

--- a/shop/templates/shop/partials/_cart-counter.html
+++ b/shop/templates/shop/partials/_cart-counter.html
@@ -16,6 +16,7 @@
         "price":"{{order_item.price}}",
         "slug": "{{order_item.slug}}",
         "image_id": "{{order_item.image_id}}",
+        "curr_total_quantity": "{{order_item.curr_total_quantity}}",
         "from":"detail"
     }'
     hx-target="#cart-count-top"
