--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -1,18 +1,22 @@
 {% load static %}
 {% load django_htmx %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <meta name="htmx-config" content='{"historyCacheSize": 0}'> -->
   <title>Northwind Commerce</title>
   <link rel="stylesheet" href="{% static 'shop/css/base.css' %}">
-  {% block extra_styles %}<link rel="stylesheet" href="{% static 'shop/css/index.css' %}">{% endblock extra_styles %}
-  <link rel="stylesheet" id="swappable-stylesheet" href="">
+  <link rel="stylesheet" href="{% static 'shop/css/product-detail.css' %}">
+  <link rel="stylesheet" href="{% static 'shop/css/cart.css' %}">
+  <link rel="stylesheet" href="{% static 'shop/css/product-listings.css' %}">
+  <link rel="stylesheet" href="{% static 'users/css/auth.css' %}">
+  {% block extra_styles %}<link rel="stylesheet" href="{% static 'shop/css/index.css' %}">
+  {% endblock extra_styles %}
   {%htmx_script%}
 </head>
 <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
-
   <div class="page">
    <header 
    class="topbar" 
