--- a/shop/templates/shop/partials/_cart.html
+++ b/shop/templates/shop/partials/_cart.html
@@ -1,10 +1,10 @@
-{% load static %}
+<!-- {% load static %}
 {%if request.htmx %}
     <link rel="stylesheet"  id="swappable-stylesheet" href="{% static 'shop/css/cart.css' %}"
     hx-swap-oob="true"
     >
-{% endif %}
-<main id="main-container" class="container section">
+{% endif %} -->
+<main id="main-container" class="container section page-product-cart">
     <div class="section__header">
     <div>
         <h1 class="section__title">Shopping cart</h1>
