--- a/shop/templates/shop/product-listings.html
+++ b/shop/templates/shop/product-listings.html
@@ -3,7 +3,7 @@
 {% block extra_styles %} <link rel="stylesheet" href="{% static 'css/product-listings.css' %}"> {% endblock extra_styles %}
 {% block content %}
 
-    <main class="container section">
+    <main class="container section page-product-listings">
       <div class="section__header">
         <div>
           <h1 class="section__title">All products</h1>
