--- a/shop/templates/shop/partials/_index.html
+++ b/shop/templates/shop/partials/_index.html
@@ -1,10 +1,10 @@
-{% load static %}
+<!-- {% load static %}
 {%if request.htmx %}
     <link rel="stylesheet"  id="swappable-stylesheet" href="{% static 'shop/css/index.css' %}"
     hx-swap-oob="true"
     >
-{% endif %}
-<main id="main-container" class="container">
+{% endif %} -->
+<main id="main-container" class="container page-index">
     <section class="hero section">
     <div class="hero__content">
         <div class="badge">Trusted by modern teams</div>
