fixed cartd page display inconsistency cart value

--- a/shop/templates/shop/partials/_cart-counter-main.html
+++ b/shop/templates/shop/partials/_cart-counter-main.html
@@ -1,4 +1,7 @@
 <span 
 id="cart-count-top" 
 class="cart-count"
+{% if from == "cart" %}
+    hx-swap-oob="true"
+{% endif %}
 >{{total_cart_count}}</span>
